<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/editCourse"
        android:icon="@drawable/ic_baseline_mode_edit_24"
        android:title="@string/edit_course"
        android:color="@android:color/white"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/deleteCourse"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete_course"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/updatefromcanvas"
        android:icon="@drawable/ic_baseline_download_24"
        android:title="@string/update_from_canvas"
        app:showAsAction="ifRoom|withText" />
</menu>